<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputPad">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:measureWithLargestChild="false"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_mod"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modulo" />

            <Button
                android:id="@+id/button_7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button_8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button_9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button_div"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_sqrt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sqrt"
                style="@style/Widget.AppCompat.Button" />

            <Button
                android:id="@+id/button_4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button_5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button_6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button_mult"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_ce"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ce" />

            <Button
                android:id="@+id/button_1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button_2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button_3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button_sub"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtract" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_c"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c" />

            <Button
                android:id="@+id/button_0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button_dec"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decimal" />

            <Button
                android:id="@+id/button_sign"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign" />

            <Button
                android:id="@+id/button_add"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addition" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="tableLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_equal"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>